--- a/teams-fall2017/index.html
+++ b/teams-fall2017/index.html
@@ -135,6 +135,14 @@
                     <img src="https://tr2.cbsistatic.com/hub/i/2014/05/15/f8964afd-bd82-4e0e-bcbe-e927363dcdc1/3b858e39e2cf183b878f54cad0073a67/codedoge.jpg" height="300">
                 </td>
             </tr>
+	    <tr>
+                <td valign="top"><a target="_blank" href="https://cs480slackers.github.io/">Slackers</a></td>
+		<td valign="top">Eric Krapil</td>
+		<td valign="top">Keeping life entertaining</td>
+		<td valign="top">
+		    <img src = "https://media.giphy.com/media/Gr0sTXbLl76Tu/source.gif">
+		</td>
+	    </tr>
             <tr>
                 <td valign="top"><a href="cppBTS/index.html">cppBTS</a></td>
                 <td valign="top">Justin Han</td>
